# qr_generator

./: CMakeLists.txt  main.cpp  qr_kernel.cu
